--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,9 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 997;
   overflow-y: auto;
 }
+.head{
+  background: repeat scroll 0 0 rgba(0,0,7,.8);
+}
 
 #header * {
   transition: ease-in-out 0.3s;
